--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,20 @@
 /* ====================================
-    
+    Utility Styles
 ================================*/
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+img {
+    max-width: 100%;
+}
+
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
+
