--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ img {
 ================================*/
 
 .header_area {
-    padding: 35px 0 20px;
+    padding: 30px 0 20px;
 }
 
 .header_content {
@@ -70,6 +70,11 @@ img {
     font-weight: 500;
     line-height: 24px;
     padding: 0 18px;
+    transition: .3s;
+}
+
+.header_menu ul li a:hover {
+    color: #E02C6D;
 }
 
 .header_icon a {
@@ -78,4 +83,73 @@ img {
     color: #3A3A3A;
     margin-left: 12.5px;
     margin-right: 12.5px;
+}
+
+/* ====================================
+    Hero Area Styles
+================================*/
+
+.hero_area {
+    padding: 80px 0;
+}
+
+.hero_content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero_text {
+    width: 52%;
+}
+
+.hero_text h2 {
+    color: #3A3A3A;
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 70px;
+}
+
+.hero_text h2 span {
+    color: #E02C6D;
+}
+
+.hero_text p {
+    color: #3A3A3A;
+    width: 500px;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 15px;
+}
+
+.hero_text a {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 700;
+    background: #E02C6D;
+    color: #fff;
+    padding: 10px 30px;
+    border-radius: 50px;
+    margin-top: 20px;
+    transition: .5s;
+}
+
+.hero_text a span {
+    margin-left: 3px;
+}
+
+.hero_text a:hover {
+    transform: scale(1.1);
+}
+
+.hero_feature {
+    width: 48%;
+    text-align: center;
+}
+
+.hero_feature img {
+    width: 440px;
+    height: 414px;
 }
