--- a/styles/style.css
+++ b/styles/style.css
@@ -220,3 +220,80 @@ img {
     font-weight: 600;
     line-height: 70px;
 }
+
+.collection_content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    justify-content: center;
+}
+
+.collections {
+    background: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 40px 0px #00000026;
+    width: 350px;
+}
+
+.collections .collection_feature img {
+    width: 330px;
+    height: 256px;
+}
+
+.collection_feature h3 {
+    font-size: 26px;
+    font-weight: 500;
+    color: #18191F;
+    margin-top: 10px;
+}
+
+.collection_description h4 {
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 24px;
+    font-weight: 400;
+    margin-top: 5px;
+}
+
+.collection_rating {
+    display: flex;
+    margin-top: 5px;
+}
+
+.stars {
+    margin-right: 10px;
+}
+
+.stars span {
+    color: #FB8200;
+    font-size: 12px;
+}
+
+.rating span {
+    font-size: 15px;
+    color: #5E6366;
+    font-weight: 600;
+}
+
+.collection_description p {
+    color: #787885;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.collection_button {
+    text-align: right;
+    margin-top: 50px;
+}
+
+.collection_button a {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 700;
+    color: #E02C6DDE;
+}
+
+.collection_button a span {
+    margin-left: 3px;
+}
