--- a/styles/style.css
+++ b/styles/style.css
@@ -297,3 +297,68 @@ img {
 .collection_button a span {
     margin-left: 3px;
 }
+
+/* ====================================
+    Feature Area Styles
+================================*/
+
+.feature_area {
+    padding: 40px 0 80px;
+}
+
+.feature_content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.feature_area_image {
+    width: 405px;
+}
+
+.feature_area_image img {
+    width: 405px;
+    height: 270px;
+}
+
+.feature_area_text {
+    width: 650px;
+}
+
+.feature_area_text h2 {
+    color: #0A0826;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 60px;
+    margin-bottom: 10px;
+}
+
+.feature_area_text p {
+    color: #6C6C6C;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 28px;
+    width: 500px;
+}
+
+.feature_area_text a {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    background: #E02C6D;
+    padding: 10px 20px;
+    margin-top: 20px;
+    transition: .5s;
+}
+
+.feature_area_text a span {
+    padding-left: 7px;
+}
+
+.feature_area_text a:hover {
+    transform: scale(1.1);
+}
