--- a/styles/style.css
+++ b/styles/style.css
@@ -279,6 +279,7 @@ img {
     color: #787885;
     font-size: 14px;
     font-weight: 600;
+    width: 300px;
 }
 
 .collection_button {
@@ -296,6 +297,12 @@ img {
 
 .collection_button a span {
     margin-left: 3px;
+    display: inline-block;
+    transition: .5s
+}
+
+.collection_button a:hover span {
+    transform: translateX(5px);
 }
 
 /* ====================================
@@ -380,6 +387,7 @@ img {
     font-size: 28px;
     font-weight: 600;
     line-height: 70px;
+    margin-bottom: 30px;
 }
 
 .contact_form {
